# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  13 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Changed net.lo depend from isdn4linux to isdn, #102846

  20 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Removed trailing tab from local.start - fixes #99624

  18 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Changed wpa-supplicant to wpa_supplicant when reporting that it is not
    instaled. Fixes #99381

  15 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not run depmod in modules-update if System.map is missing, bug #59188.

* rc-scripts-1.6.13 (13 Jul 2005)

  12 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Added dhcp_eth0="nogateway" option, generic to all dhcp clients.
    Fixes #98466

  11 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add fix -r to unmount to be -n .. bug #98667, thanks to Patrick McLean.

  11 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    udhcpc/dhclient helpers no longer flush IPv6 addresses - fixes #98539

  09 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add workaround for evms device names and 'RC_DEVICE_TARBALL="yes"'.  Patch
    by Olaf Niermann, bug #95799.

* rc-scripts-1.6.11 (20 Apr 2005)

  13 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    fixed typo in iwconfig - fixes #84999 thanks to Jérémie Delente

* rc-scripts 1.6.10 (10 Mar 2005)

  10 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    net.lo now supports fallback_route - fixes #75676
    due to bash limitations, only one fallback route is supported
    
    iproute2 now allows appends routes instead of adding them
    this allows many default routes

    RC_STRICT_NET_CHECKING now supports the none "option" which means
    that the net service is always up

  07 Feb 2005; Roy Marples <uberlord@gentoo.org>:

    netmask2cidr now works correctly - fixes #81119
    Thanks to Benoit Boissinot for the patch
